--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -96,7 +96,7 @@ p{
     max-width: 20rem;
     font-weight: bold;
     justify-content: center;
-
+    margin-top: 2rem;
 
     @media screen and (min-width: map-get($break-point, mlg)) {
 
