--- a/sass/layout/_l-header.scss
+++ b/sass/layout/_l-header.scss
@@ -264,9 +264,10 @@
             width: 2rem;
             height: 2rem;
             margin: 1.5rem 1rem 1rem 1rem;
-            right: 0;
+            right:1rem;
             position: fixed;
             z-index: 1000;
+            
 
             transform:rotate(0deg);
             transition:.5s ease-in-out;
