--- a/css/screen.css
+++ b/css/screen.css
@@ -435,7 +435,7 @@ img {
 /* line 238, ../sass/layout/_l-banner.scss */
 .l-section__banner .l-banner .l-point {
   width: 10rem;
-  margin: -3.2rem auto auto -5.5rem;
+  margin: -3.2rem -3rem auto -9.5rem;
   z-index: 996;
   padding-bottom: 2rem;
 }
