--- a/sass/layout/_l-banner.scss
+++ b/sass/layout/_l-banner.scss
@@ -237,7 +237,7 @@
 
                     .l-point{
                         width: 10rem;
-                        margin:-3.2rem auto auto -5.5rem;
+                        margin:-3.2rem -3rem auto -9.5rem;
                         z-index: 996;
                         padding-bottom: 2rem;
 
