--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -220,7 +220,7 @@
             
         .btn--detail--home{
                     
-            margin:2rem auto auto 0rem;
+            margin:4rem auto auto 0rem;
             display: block;
 
             @media screen and (min-width: map-get($break-point, md)) {  
@@ -456,7 +456,7 @@
             margin: 3rem auto auto auto;
             display: block;
             background-color: map-get($colors,primary);
-            padding-bottom: 2rem;
+            padding-bottom: 4rem;
             
             width: 100%;
             font-size: 18px;
@@ -464,9 +464,10 @@
                 @media screen and (min-width: map-get($break-point, md)) {
                     height: auto;
                     width: auto;
+                    padding-bottom: 30rem;
                 }
                 @media screen and (min-width: map-get($break-point, lg)) {
-                    
+                    margin-bottom: 2rem;
                     background-color: transparent;
                 }
                 .cadre__creation {
@@ -489,7 +490,7 @@
                 
                         display: block;
                         width: 100%;
-                        height: 120%;
+                        height: 105%;
                         grid-row: 1/7;
                         grid-column:1/6;
                         z-index: 1;
@@ -545,7 +546,7 @@
 
                     .title__creation{
                         
-                            margin: auto 0 1rem 1rem ;
+                            margin: auto 0 4rem 1rem ;
                             color: map-get($colors,main);
                             line-height: 2rem;
                             z-index: 1;
@@ -607,7 +608,7 @@
                         font-weight: normal;
                         font-size: 20px;
                         text-align: left;
-                        margin:7rem 1rem 2rem 1rem;
+                        margin:8rem 1rem 2rem 1rem;
                         font-weight:normal;
 
 
@@ -688,9 +689,9 @@
                             display: block;
                             grid-row: 4/5;
                             grid-column:5/6;
-                            width: 70%;
+                            width: 80%;
                             
-                            margin:12rem 0 auto 18rem;
+                            margin:12rem 0 auto 20rem;
                             
 
                             
@@ -764,7 +765,7 @@
                                     @media screen and (min-width: map-get($break-point, lg)) {
                                         display: block;
                                         margin-top: 0;
-                                        width: 80%;
+                                        width: 85%;
                                         line-height: 3rem;
                             
                             
@@ -802,10 +803,10 @@
                                 z-index: 999;
                                 position: absolute;
                                 width: 15rem;
-                                margin:-7rem auto auto 11rem;
+                                margin:23rem auto auto 11rem;
                             }
                             @media screen and (min-width: map-get($break-point,lg )) {
-                                margin:-2rem auto auto 25rem;
+                                margin:-4rem auto auto 27rem;
                                 position: relative;
                                 }
                         
@@ -840,21 +841,22 @@
                     
                         @media screen and (min-width: map-get($break-point, md)) {
                             position: relative;
-                            margin-top: 22rem;
+                            display:none;
                             
                         }
                         @media screen and (min-width: map-get($break-point, lg)) {
                             display: block;
                             grid-column: 1/2;
-                            grid-row: 1/7;
+                            grid-row: 4/7;
                             width: 150%;
                             z-index: 998;
+                            
                     }
 
                     @media screen and (min-width: map-get($break-point, mlg)) {
                         display: block;
                         grid-column: 1/2;
-                        grid-row: 1/7;
+                        grid-row: 2/7;
                         width: 130%;
                         z-index: 998;
                 }
@@ -917,7 +919,7 @@
                         @media screen and (min-width: map-get($break-point, md)) {
                             display:block;
                             width: 15%;
-                            margin-top: -10rem;
+                            margin-top: 21rem;
                             margin-left: 5rem;
                             position: absolute;
                             z-index: 995;
@@ -952,13 +954,14 @@
         
                 margin:auto;
                 display: block;
-                margin-top: 2rem;
+                margin-top: 5rem;
                 width: 100%;
                 padding:1rem;
                 
                 @media screen and (min-width: map-get($break-point, md)) {
                     height: auto;
                     margin-top: auto;
+                    padding-top: 6rem
                     
                 }
                 @media screen and (min-width: map-get($break-point, xxlg)) {
@@ -1084,7 +1087,7 @@
                 
                 
                             @media screen and (min-width: map-get($break-point, md)) {
-                                margin:2rem auto auto auto;
+                                margin:2rem auto auto 0;
                                 font-size: 20px;
                                 text-align: auto;
                                 width: 100%;
@@ -1094,7 +1097,7 @@
                             }
                             @media screen and (min-width: map-get($break-point, lg)) {
                                 
-                                width: 80%;
+                                width: 150%;
                             }
                             @media screen and (min-width: map-get($break-point, mlg)) {
                                 display: block;
