--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -1,6 +1,6 @@
 /*GRID REALISATION CARD1 */
-.m-wrap {
-  width: 95%
+.m-wrap.realisation {
+  width: 95%;
 }
 .grid-containerAmoi {
   display: grid;
@@ -26,8 +26,8 @@
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 9.1rem;
-  background: lightgray;
-  border: yellowgreen;
+ // background: lightgray;
+ // border: yellowgreen;
 }
 
 .item-3 {
@@ -36,7 +36,7 @@
   margin-bottom: 3.8rem;
   padding-bottom: 0.8rem;
   margin-top: 1.9rem;
-  border-top: 3px solid yellow;
+//  border-top: 3px solid yellow;
 
 }
 
@@ -63,12 +63,11 @@
   .item-2{
     margin-top: 1rem;
   }
-
 }
 
 /* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
-  .m-wrap {
+  .m-wrap.realisation {
     width: 90%;
   }
   .grid-containerAmoi {
@@ -81,7 +80,7 @@
     padding-bottom: 0.8rem;
     margin-bottom: 1.3rem;
     margin-top: 1.4rem;
-    border: 1px dotted red;
+  //  border: 1px dotted red;
   }
 
   .item-2{
@@ -89,7 +88,7 @@
     grid-row: 3 / 10;
     padding-bottom: 0.8rem;
     margin-top: 8.4rem;
-    border: 1px dotted lightcoral;
+   // border: 1px dotted lightcoral;
     z-index: 6;
   }
 
@@ -111,7 +110,7 @@
 
 /* grande TABLETTE md = 740 */
 @media screen and (min-width: break-point(md)){
-  .m-wrap {
+  .m-wrap.realisation {
     width: 80%
   }
   .item-1{
@@ -184,7 +183,7 @@
   }
 
   .item-6 {
-    grid-column: 5 / 7;
+    grid-column: 4/7;
     grid-row: 8 / 10;
     margin-bottom: 10px;
     z-index: 3;
@@ -200,5 +199,25 @@
     grid-column: 4/7;
   }
 }
+/* PC portable xlg 1360px */
+@media screen and (min-width: break-point(xlg)){
+  .item-6{
+    grid-column: 2/7;
+    z-index: 6;
+    margin-top: 6rem;
+  }
+
+}
+/* PC  xtlg  1920px */
+@media screen and (min-width: break-point(xtlg)){
+  .m-wrap.realisation{
+    width: 75%;
+  }
+  .item-6{
+    margin-top: 9rem;
+  }
+}
+
+
 
 
