--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -1,13 +1,23 @@
 /* ICI commence le scss de _m-realisations */
-.m-wrap{
-  .green{
+.m-wrap.realisation{
+  width: 95%;
+  margin: auto;
+  p{
+    color: color(primary);
+    font-size: 20px;
+    width: 100%;
+    line-height: 2rem;
+  }
+  /*.green{
     border: 3px dashed yellowgreen;
   }
-
+  */
+/*
   .lime {
     margin: 1.2rem;
     //border: 4px dashed lime;
   }
+  */
   .title__primary2 {
     font-style: italic;
     margin:3rem auto 1rem auto;
@@ -18,7 +28,7 @@
 
     span{
     border-bottom: solid 3px map-get($colors , primaryGreen);
-    color: map-get($colors,primary);
+    color: map-get($colors, primary);
 
     }
   }
@@ -56,7 +66,7 @@
   .coverimage {
     position: relative;
     left: -2.1rem;
-    bottom: 16rem;
+    bottom: 17rem;
     width: 84%;
     padding-left: 5rem;
   }
@@ -66,7 +76,7 @@
     position: relative;
     width: 25%;
     left: 8.7rem;
-    bottom: 12.5rem;
+    bottom: 14.3rem;
   }
 
   .coverrelatif {
@@ -91,6 +101,7 @@
     .coverimage-ter img{
       width: 130%;
       padding-left: 2.2rem;
+      bottom: 13.5rem;
     }
 
   }
@@ -100,17 +111,14 @@
       font-size: 1.6rem;
     }
 
+
     .coverimage{
-      bottom: 19rem;
+      bottom: 21rem;
     }
     .coverimage-ter {
       width: 28%;
-      /*
-      left: 11.6rem;
-      bottom: 16.5rem;
-      */
       left: 9.7rem;
-      bottom: 18.5rem;
+      bottom: 19.3rem;
       padding-left: 0.8rem;
     }
 
@@ -161,7 +169,7 @@
     position: absolute;
     left: -0.4rem;
     bottom: -20.2rem;
-    border: 1px solid orange;
+    /* border: 1px solid orange;*/
     }
 
     .coverimage-ter{
@@ -172,6 +180,7 @@
 
   /* grande TABLETTE md = 740px */
   @media screen and (min-width: break-point(md)){
+
     .coverimage{
       left: -4rem;
     }
@@ -260,6 +269,7 @@
     .backimage-second {
       padding-left: 0.8rem;
       margin-left: 1.6rem;
+      margin-top: -8rem;
     }
     .backimage-second img {
       max-width: 100%;
@@ -273,6 +283,12 @@
 
   /* PC portable lg 1024px */
   @media screen and (min-width: break-point(lg)){
+    .coverrelatif {
+      position: relative;
+      left: 6.5rem;
+      bottom: -4.2rem;
+      width: 85%;
+    }
     .coverrelatif-ter {
         position: absolute;
         left: 22rem;
@@ -290,8 +306,51 @@
 
   /* PC portable xlg 1360px */
   @media screen and (min-width: break-point(xlg)){
+    .title__primary2{
+      font-size: 1.6rem;
+    }
+    p{
+      margin-top: 1.5rem;
+    }
     .backimage-second img {
-  top: -11.5rem;
+      top: 0;
+    }
+    .coverimage-ter{
+      left: -9.7rem;
+    }
+  }
+  /* PC portable xxlg 1420px */
+  @media screen and (min-width: break-point(xxlg)){
+    .title__primary2{
+      font-size: 1.8rem;
+    }
+    .coverrelatif {
+      left: 6.5rem;
+      bottom: -1.2rem;
+    }
+    .coverrelatif img {
+      max-width: 58%;
+    }
+  }
+  /* PC  xtlg  1920px */
+  @media screen and (min-width: break-point(xtlg)){
+    .title__primary2{
+      font-size: 2rem;
+    }
+    p{
+      font-size: 24px;
+    }
+    .coverrelatif {
+      left: 7.5rem;
+    bottom: 4.8rem;
+    }
+    .coverrelatif img {
+      max-width: 48%;
+    }
+    .coverrelatif-ter {
+      left: 30rem;
+      bottom: -7.2rem;
+      max-width: 93%;
     }
   }
 
