--- a/css/screen.css
+++ b/css/screen.css
@@ -2547,16 +2547,34 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 1.4rem;
   padding-top: 1.4rem;
 }
+.m-wrap.realisation .backimage2 > img {
+  max-width: 100%;
+  margin-top: 1.4rem;
+  padding-top: 1.4rem;
+}
 .m-wrap.realisation .backimage-second img {
   position: relative;
   max-width: 100%;
   left: -1.4rem;
   top: -16rem;
 }
+.m-wrap.realisation .backimage-second2left img {
+  position: relative;
+  max-width: 100%;
+  left: -2rem;
+  top: 8rem;
+}
 .m-wrap.realisation .coverimage {
   position: relative;
   left: -2.1rem;
   bottom: 17rem;
+  width: 84%;
+  padding-left: 5rem;
+}
+.m-wrap.realisation .coverimage2middle {
+  position: relative;
+  left: 2.9rem;
+  bottom: 10rem;
   width: 84%;
   padding-left: 5rem;
 }
@@ -2577,6 +2595,12 @@ footer .l-footer .section__footer--right .btn--footer {
 }
 .m-wrap.realisation .coverrelatif-second img {
   max-width: 30%;
+}
+.m-wrap.realisation .coverrelatif-second2left img {
+  max-width: 55%;
+  position: relative;
+  left: 2rem;
+  top: -6rem;
 }
 @media screen and (min-width: 370px) {
   .m-wrap.realisation .coverrelatif img {
@@ -2638,6 +2662,16 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverimage-ter {
     left: 5.3rem;
     bottom: 26.5rem;
+  }
+  .m-wrap.realisation .coverimage-second2right {
+    position: absolute;
+  }
+  .m-wrap.realisation .coverrelatif-second2right {
+    position: relative;
+    left: -2.1rem;
+    bottom: -1.7rem;
+    border: 1px solid red;
+    width: 15%;
   }
   .m-wrap.realisation .coverrelatif-ter {
     position: absolute;
@@ -2798,7 +2832,7 @@ footer .l-footer .section__footer--right .btn--footer {
   }
 }
 
-/*GRID REALISATION CARD1 */
+/*GRID REALISATION CARD1-2 */
 .m-wrap.realisation {
   width: 95%;
 }
@@ -2809,7 +2843,13 @@ footer .l-footer .section__footer--right .btn--footer {
   font-size: 1.2rem;
 }
 
-.grid-containerAmoi > * {
+.grid-containerAmoi2 {
+  display: grid;
+  grid-template-columns: 5% 20% 10% 15% 30% 20%;
+  font-size: 1.2rem;
+}
+
+.grid-containerAmoi > *, .grid-containerAmoi2 {
   padding-left: 0.8rem;
 }
 
@@ -2821,12 +2861,29 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 1.4rem;
 }
 
+.item-21 {
+  grid-column: 1/7;
+  grid-row: 1/2;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.4rem;
+  background: orange;
+}
+
 .item-2 {
   grid-column: 1/7;
   grid-row: 3/4;
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 9.1rem;
+}
+
+.item-22 {
+  grid-column: 1/7;
+  grid-row: 2/3;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
 }
 
 .item-3 {
@@ -2837,6 +2894,15 @@ footer .l-footer .section__footer--right .btn--footer {
   margin-top: 1.9rem;
 }
 
+.item-23 {
+  grid-column: 1/7;
+  grid-row: 3/3;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
+  border: 3px solid yellow;
+}
+
 .item-4 {
   grid-column: 2/7;
   grid-row: 7/8;
@@ -2845,7 +2911,19 @@ footer .l-footer .section__footer--right .btn--footer {
   z-index: 4;
 }
 
+.item-24 {
+  grid-column: 1/7;
+  grid-row: 4/4;
+  margin-bottom: 0.8rem;
+  margin-top: 5.4rem;
+  border: 1px solid violet;
+}
+
 .item-5 {
+  display: none;
+}
+
+.item-25 {
   display: none;
 }
 
@@ -2854,6 +2932,23 @@ footer .l-footer .section__footer--right .btn--footer {
   grid-row: 8/10;
   margin-bottom: 0.8rem;
   margin-top: 5.4rem;
+}
+
+.item-26 {
+  grid-column: 1/7;
+  grid-row: 5/6;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 3.1rem;
+  border: 1px solid red;
+}
+
+.item-27 {
+  grid-column: 3/7;
+  grid-row: 5/6;
+  margin-top: 28.9rem;
+  margin-bottom: 4.5rem;
+  z-index: 4;
 }
 
 /* version moyen mobile xxs 420px */
@@ -2900,6 +2995,13 @@ footer .l-footer .section__footer--right .btn--footer {
     padding-bottom: 0.8rem;
     margin-bottom: 1rem;
     margin-top: 1.4rem;
+  }
+
+  .item-25 {
+    grid-column: 6/7;
+    grid-row: 2/6;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
   }
 }
 /* grande TABLETTE md = 740 */
