--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -1,4 +1,4 @@
-/*GRID REALISATION CARD1 */
+/*GRID REALISATION CARD1-2 */
 .m-wrap.realisation {
   width: 95%;
 }
@@ -7,9 +7,15 @@
   grid-template-columns: 20% 13% 7% 15% 30% 15%;
   font-size: 1.2rem;
 }
-.grid-containerAmoi>* {
+.grid-containerAmoi2 {
+  display: grid;
+  grid-template-columns: 5% 20% 10% 15% 30% 20%;
+  font-size: 1.2rem;
+}
+.grid-containerAmoi>*, .grid-containerAmoi2 {
   padding-left: 0.8rem;
 }
+
 
 .item-1 {
   grid-column: 1 / 7;
@@ -18,6 +24,14 @@
   padding-bottom: 0.8rem;
   margin-top: 1.4rem;
   //background: orange;
+}
+.item-21 {
+  grid-column: 1 / 7;
+  grid-row: 1 / 2;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.4rem;
+  background: orange;
 }
 
 .item-2 {
@@ -29,6 +43,14 @@
  // background: lightgray;
  // border: yellowgreen;
 }
+.item-22 {
+  grid-column: 1 / 7;
+  grid-row: 2 / 3;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
+//  border-top: 3px solid yellow;
+}
 
 .item-3 {
   grid-column: 1 / 7;
@@ -37,6 +59,14 @@
   padding-bottom: 0.8rem;
   margin-top: 1.9rem;
 //  border-top: 3px solid yellow;
+}
+.item-23 {
+  grid-column: 1 / 7;
+  grid-row: 3 / 3;
+  margin-bottom: 3.8rem;
+  padding-bottom: 0.8rem;
+  margin-top: 1.9rem;
+  border: 3px solid yellow;
 
 }
 
@@ -47,8 +77,18 @@
   margin-bottom: 4.5rem;
   z-index: 4;
 }
+.item-24 {
+  grid-column: 1 / 7;
+  grid-row: 4 / 4;
+  margin-bottom: 0.8rem;
+  margin-top: 5.4rem;
+  border: 1px solid violet;
+}
 
 .item-5 {
+  display: none;
+}
+.item-25 {
   display: none;
 }
 
@@ -58,6 +98,27 @@
   margin-bottom: 0.8rem;
   margin-top: 5.4rem;
 }
+.item-26 {
+  grid-column: 1 / 7;
+  grid-row: 5/6;
+  margin-bottom: 1.4rem;
+  padding-bottom: 0.8rem;
+  margin-top: 3.1rem;
+  border: 1px solid red;
+ // background: lightgray;
+
+}
+.item-27 {
+  grid-column: 3/7;
+    grid-row: 5/6;
+    margin-top: 28.9rem;
+    margin-bottom: 4.5rem;
+  z-index: 4;
+}
+
+
+
+
 /* version moyen mobile xxs 420px */
 @media screen and (min-width: breal-point(xxs)){
   .item-2{
@@ -105,6 +166,16 @@
     padding-bottom: 0.8rem;
     margin-bottom: 1rem;
     margin-top: 1.4rem;
+  }
+
+  .item-25{
+    grid-column: 6 / 7;
+    grid-row: 2 / 6;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
+   // z-index: 6;
+    //background-color: green;
+
   }
 }
 
