--- a/css/screen.css
+++ b/css/screen.css
@@ -2617,14 +2617,27 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .title__primary2 {
     font-size: 1.6rem;
   }
+  .m-wrap.realisation .coverrelatif2 {
+    bottom: 2rem;
+  }
+  .m-wrap.realisation .coverrelatif2 img {
+    width: 125%;
+  }
   .m-wrap.realisation .coverimage {
     bottom: 21rem;
   }
   .m-wrap.realisation .coverimage-ter {
     width: 28%;
-    left: 9.7rem;
-    bottom: 19.3rem;
+    left: 1.9rem;
+    bottom: 15rem;
     padding-left: 0.8rem;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    position: relative;
+    left: 1.9rem;
+    bottom: 15rem;
+    width: 80%;
+    padding-left: 5rem;
   }
 }
 @media screen and (min-width: 530px) {
@@ -2634,6 +2647,24 @@ footer .l-footer .section__footer--right .btn--footer {
   .m-wrap.realisation .coverimage-ter {
     left: 12.7rem;
     bottom: 23.5rem;
+  }
+  .m-wrap.realisation .coverimage2middle {
+    left: 1.3rem;
+    bottom: 9rem;
+  }
+  .m-wrap.realisation .backimage-second2left {
+    width: 118%;
+  }
+  .m-wrap.realisation .backimage-second2left img {
+    position: relative;
+    max-width: 100%;
+    left: 0rem;
+    top: 16rem;
+  }
+  .m-wrap.realisation .coverrelatif-second2left img {
+    top: 9rem;
+    left: 1rem;
+    width: 75%;
   }
 }
 @media screen and (min-width: 600px) {
@@ -2896,10 +2927,10 @@ footer .l-footer .section__footer--right .btn--footer {
 
 .item-23 {
   grid-column: 1/7;
-  grid-row: 3/3;
-  margin-bottom: 3.8rem;
+  grid-row: 2/3;
+  margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
-  margin-top: 1.9rem;
+  margin-top: 13.9rem;
   border: 3px solid yellow;
 }
 
@@ -2915,7 +2946,7 @@ footer .l-footer .section__footer--right .btn--footer {
   grid-column: 1/7;
   grid-row: 4/4;
   margin-bottom: 0.8rem;
-  margin-top: 5.4rem;
+  margin-top: 1.4rem;
   border: 1px solid violet;
 }
 
@@ -2952,9 +2983,60 @@ footer .l-footer .section__footer--right .btn--footer {
 }
 
 /* version moyen mobile xxs 420px */
-@media screen and (min-width: breal-point(xxs)) {
+@media screen and (min-width: 420px) {
   .item-2 {
     margin-top: 1rem;
+  }
+
+  .item-23 {
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+
+  .item-24 {
+    grid-row: 2/3;
+    margin-bottom: 0.8rem;
+    margin-top: 35.4rem;
+  }
+
+  .item-27 {
+    grid-column: 3/7;
+    grid-row: 5/6;
+    margin-top: 34.9rem;
+  }
+}
+/* version Surface Duo 520px xx-s */
+@media screen and (min-width: 530px) {
+  .item-21 {
+    grid-column: 1/6;
+  }
+
+  .item-22 {
+    grid-column: 2/5;
+    grid-row: 2/3;
+  }
+
+  .item-23 {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    /* margin-bottom: -6.8rem; */
+    margin-top: 1rem;
+  }
+
+  .item-24 {
+    grid-column: 5/7;
+    grid-row: 3/4;
+    margin-top: 2.4rem;
+  }
+
+  .item-26 {
+    grid-column: 1/3;
+    grid-row: 3/5;
+  }
+
+  .item-27 {
+    margin-top: 0.5rem;
+    padding-left: 0.5rem;
   }
 }
 /* version petite tablette xs 600px */
