--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -62,10 +62,10 @@
 }
 .item-23 {
   grid-column: 1 / 7;
-  grid-row: 3 / 3;
-  margin-bottom: 3.8rem;
+  grid-row: 2 / 3;
+  margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
-  margin-top: 1.9rem;
+  margin-top: 13.9rem;
   border: 3px solid yellow;
 
 }
@@ -81,7 +81,7 @@
   grid-column: 1 / 7;
   grid-row: 4 / 4;
   margin-bottom: 0.8rem;
-  margin-top: 5.4rem;
+  margin-top: 1.4rem;
   border: 1px solid violet;
 }
 
@@ -100,7 +100,7 @@
 }
 .item-26 {
   grid-column: 1 / 7;
-  grid-row: 5/6;
+  grid-row: 5 / 6;
   margin-bottom: 1.4rem;
   padding-bottom: 0.8rem;
   margin-top: 3.1rem;
@@ -109,8 +109,8 @@
 
 }
 .item-27 {
-  grid-column: 3/7;
-    grid-row: 5/6;
+  grid-column: 3 / 7;
+    grid-row: 5 / 6;
     margin-top: 28.9rem;
     margin-bottom: 4.5rem;
   z-index: 4;
@@ -120,11 +120,60 @@
 
 
 /* version moyen mobile xxs 420px */
-@media screen and (min-width: breal-point(xxs)){
+@media screen and (min-width: break-point(xxs)){
   .item-2{
     margin-top: 1rem;
   }
+  .item-23 {
+    grid-column: 1 / 7;
+    grid-row: 2 / 3;
+
+  }
+
+  .item-24{
+    grid-row: 2 / 3;
+    margin-bottom: 0.8rem;
+    margin-top: 35.4rem;
+  }
+
+  .item-27 {
+    grid-column: 3 / 7;
+    grid-row: 5 / 6;
+    margin-top: 34.9rem;
+  }
 }
+/* version Surface Duo 520px xx-s */
+@media screen and (min-width: break-point(xx-s)){
+  .item-21 {
+    grid-column: 1/6;
+  }
+  .item-22 {
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+  }
+  .item-23 {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    /* margin-bottom: -6.8rem; */
+    margin-top: 1rem;
+  }
+  .item-24 {
+    grid-column: 5 / 7;
+    grid-row: 3 / 4;
+    margin-top: 2.4rem;
+  }
+  .item-26 {
+    grid-column: 1 / 3;
+    grid-row: 3 / 5;
+  }
+  .item-27 {
+    margin-top: 0.5rem;
+    padding-left: 0.5rem;
+  }
+
+}
+
+
 
 /* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
