--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -331,8 +331,26 @@
     margin-bottom: 10px;
     z-index: 3;
   }
+
+  .item-21{
+    margin-right: 1rem;
+    padding-right: 1rem;
+  }
+  .item-22{
+    border: 1px solid green;
+    margin-right: -2rem;
+  }
+  .item-24{
+    margin-top: 13.7rem;
+  }
 }
-/* petit PC portable md-plus 1280px */
+/* petit PC portable lg 1024px */
+@media screen and (min-width: break-point(lg)){
+  .item-21 {
+    grid-column: 1/4;
+}
+
+/* petit PC portable mlg 1280px */
 @media screen and (min-width: break-point(mlg)){
   .item-4{
     grid-column: 3 / 6;
