petit PC portable lg 1024px

--- a/css/screen.css
+++ b/css/screen.css
@@ -2513,7 +2513,7 @@ footer .l-footer .section__footer--right .btn--footer {
   /* version petite tablette  xs 600px */
   /* grande TABLETTE md = 740px */
   /* petit PC portable md-plus 799px */
-  /* PC portable lg 1024px */
+  /* petit PC portable lg 1024px */
   /* PC portable xlg 1360px */
   /* PC portable xxlg 1420px */
   /* PC  xtlg  1920px */
