--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -352,6 +352,11 @@
   }
   .item-22 {
     grid-column: 2 / 4;
+    margin-bottom: 4.5rem;
+  }
+  .item-23 {
+    grid-column: 4 / 6;
+    grid-row: 1 / 3;
   }
   .item-24 {
     grid-column: 5 / 6;
