--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -62,10 +62,10 @@
 }
 .item-23 {
   grid-column: 1 / 7;
-  grid-row: 2 / 3;
+  grid-row: 2/2;
   margin-bottom: 0.2rem;
   padding-bottom: 0.8rem;
-  margin-top: 13.9rem;
+  margin-top: 19.9rem;
   border: 3px solid yellow;
 
 }
@@ -79,10 +79,14 @@
 }
 .item-24 {
   grid-column: 1 / 7;
-  grid-row: 4 / 4;
+  grid-row: 2 / 3;
   margin-bottom: 0.8rem;
-  margin-top: 1.4rem;
+  margin-top: 4rem;
   border: 1px solid violet;
+  padding-top: 4rem;
+    p{
+      margin-top: 29rem;
+    }
 }
 
 .item-5 {
@@ -111,13 +115,10 @@
 .item-27 {
   grid-column: 3 / 7;
     grid-row: 5 / 6;
-    margin-top: 28.9rem;
+    margin-top: 30.9rem;
     margin-bottom: 4.5rem;
   z-index: 4;
 }
-
-
-
 
 /* version moyen mobile xxs 420px */
 @media screen and (min-width: break-point(xxs)){
@@ -127,13 +128,12 @@
   .item-23 {
     grid-column: 1 / 7;
     grid-row: 2 / 3;
-
   }
 
   .item-24{
     grid-row: 2 / 3;
     margin-bottom: 0.8rem;
-    margin-top: 35.4rem;
+    margin-top: 11rem;
   }
 
   .item-27 {
@@ -141,7 +141,9 @@
     grid-row: 5 / 6;
     margin-top: 34.9rem;
   }
+
 }
+
 /* version Surface Duo 530px xx-s */
 @media screen and (min-width: break-point(xx-s)){
   .item-21 {
@@ -160,14 +162,18 @@
     grid-column: 5 / 7;
     grid-row: 3 / 4;
     margin-top: 2.4rem;
+
+    p{
+      margin-top: -2rem;
+    }
   }
   .item-26 {
     grid-column: 1 / 3;
     grid-row: 3 / 5;
   }
   .item-27 {
-    margin-top: 0.5rem;
-    padding-left: 0.5rem;
+    margin-top: 1rem;
+    padding-left: 1.5rem;
   }
 
 }
@@ -191,13 +197,16 @@
   //  border: 1px dotted red;
   }
 
-  .item-2{
+  .item-2 {
     grid-column: 1 / 3;
     grid-row: 3 / 10;
     padding-bottom: 0.8rem;
     margin-top: 8.4rem;
    // border: 1px dotted lightcoral;
     z-index: 6;
+  }
+  .item-27 {
+    margin-bottom: 0.5rem;
   }
 
   .item-3 {
@@ -215,18 +224,9 @@
     margin-top: 1.4rem;
   }
 
-  .item-25{
-    grid-column: 6 / 7;
-    grid-row: 2 / 6;
-    padding-top: 1.9rem;
-    margin-bottom: 1.4rem;
-   // z-index: 6;
-    //background-color: green;
-
-  }
 }
 
-/* grande TABLETTE md = 740 */
+/* grande TABLETTE md  740px */
 @media screen and (min-width: break-point(md)){
   .m-wrap.realisation {
     width: 80%
@@ -312,6 +312,7 @@
     z-index: 6;
     //background-color: blanchedalmond;
   }
+
   .item-5 {
     display: grid;
     grid-column: 6 / 7;
@@ -342,13 +343,29 @@
   }
   .item-24{
     margin-top: 13.7rem;
+    grid-column: 4/6;
+    margin-left: 2.6rem;
   }
+  .item-25{
+    display: grid;
+    grid-column: 5 / 7;
+    grid-row: 2 / 6;
+    padding-top: 1.9rem;
+    margin-bottom: 1.4rem;
+    border: 3px dashed darkcyan;
+   // z-index: 6;
+    //background-color: green;
+  }
+  .item-27{
+    padding-left: 0.5rem;
+  }
+
 }
 
 /* petit PC portable lg 1024px */
 @media screen and (min-width: break-point(lg)){
   .item-21 {
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
   }
   .item-22 {
     grid-column: 2 / 4;
@@ -361,11 +378,7 @@
   .item-24 {
     grid-column: 5 / 6;
   }
-  .item-25 {
-    grid-column: 6 / 7;
-    grid-row: 2 / 6;
-    border: 3px dashed darkcyan;
-  }
+
   .item-27 {
     grid-column: 3/6;
     margin-left: 2rem;
