--- a/sass/modules/_m-realisations.scss
+++ b/sass/modules/_m-realisations.scss
@@ -336,6 +336,9 @@
       width: 15%;*/
       display: none;
     }
+    .coverrelatif-second2right {
+      width: 70%;
+    }
 
 
     .coverrelatif-ter {
@@ -431,6 +434,7 @@
     .coverrelatif img {
       max-width: 58%;
     }
+
   }
   /* PC  xtlg  1920px */
   @media screen and (min-width: break-point(xtlg)){
